--- a/402-quantenlung-von-energie/latex/template.tex
+++ b/402-quantenlung-von-energie/latex/template.tex
@@ -69,7 +69,7 @@
 % }
 
 
-\def\ergo{\Rightarrow}
+\def\ergo{\Rightarrow} %silly stuff for me
 
 \addtokomafont{chapterprefix}{\raggedleft}
 \addtokomafont{chapter}{\Large}
@@ -87,5 +87,5 @@
 
 \usepackage{graphicx}
 \graphicspath{{./plots/}}
-\author{Leonie Dessau \& Carla Vermöhlen}
+\author{Leonie Dessau \& Lena Beckmann}
 \setlength\parindent{0pt}
