tex exists but not bib

--- a/402-quantenlung-von-energie/latex/3_balmerserie.tex
+++ b/402-quantenlung-von-energie/latex/3_balmerserie.tex
@@ -168,7 +168,7 @@ Weiter gilt für Reflexionsgitter $\frac{\lambda}{\Delta \lambda}=nN$, mit $n$ a
     \label{eq:aufloesung}
     \mathcal{R} = 30~675\pm10~225 
 \end{align}
-Bei der als $\SI{546,074}{\nano\meter}$ zugeordneten gelb-grünen Linie, die stark beobachtet werden konnte, errechnet sich so ein minimales Wellenlängenintervall von $\Delta \lambda_{\text{gelb-grün}}\approx \SI{0.01.78(0.0006)}{\nano \meter}$
+Bei der als $\SI{435.833}{\nano\meter}$ zugeordneten blauen Linie, die stark beobachtet werden konnte, errechnet sich so ein minimales Wellenlängenintervall von $\Delta \lambda_{\text{blau}}= \SI{14.2081(0.005)}{\pico \meter}$. Da die verschiedenen Spektrallinien von Quecksilber im blauen Bereich tatsächlich nur wenige $\unit{nm}$ auseinander liegen, aber als deutlich distinkte Linien zu erkennen waren, ist dieser Wert für $\mathcal{R}$ plausibel.
 
 
 
