--- a/402-quantenlung-von-energie/latex/main.tex
+++ b/402-quantenlung-von-energie/latex/main.tex
@@ -13,10 +13,10 @@
 \maketitle
 
 
-%\include{1_einleitung}
-%\include{2_photoeffekt}
+\include{1_einleitung}
+\include{2_photoeffekt}
 \include{3_balmerserie}
-% \include{4_fazit}
+\include{4_fazit}
 
 %g = 488.7066458815828 +- 5.4334557479633405 nm
 %R^2=0.9437169704181901
@@ -27,6 +27,7 @@
 %g_avg = 485.2721627584699 +- 1.8873523146851146
 
 %only include for final compile, this kills the compile time
-%\printbibliography  
+\chapter{Anhang}
+\printbibliography  
 
 \end{document}
