--- a/402-quantenlung-von-energie/latex/template.tex
+++ b/402-quantenlung-von-energie/latex/template.tex
@@ -11,8 +11,27 @@
 \usepackage{subcaption}
 \usepackage{float}
 \usepackage[german]{babel}
-\usepackage[separate-uncertainty = true,multi-part-units=brackets, number-unit-product = \text{ }, mode=math, exponent-product = \cdot, output-product = \cdot]{siunitx}
+\usepackage{siunitx}
+
+\sisetup{
+ separate-uncertainty = true,
+ multi-part-units=brackets, 
+ number-unit-product = \text{ }, 
+ mode=math, 
+ exponent-product = \cdot, 
+ output-product = \cdot,
+ output-decimal-marker = {,}
+}
+
 \usepackage{ circuitikz }
+
+% \usepackage[backend=biber, style=numeric]{biblatex} % do not change this, the whole thing will break
+% \usepackage{bibtex}
+\usepackage[backend=bibtex]{biblatex}
+
+
+
+
 
 % common macros so i don't have to import packages or type too much
 \def\diff#1#2{\frac{\text{d}#1}{\text{d}#2}}
@@ -34,12 +53,13 @@
 }
 
 \def\jafps#1#2#3{
-	\begin{center}
+	\begin{figure}[H]
+    \centering
 		\includegraphics[width=#3\textwidth]{#1}
 		%\includegraphics[height=0.4\textheight]{#1}
 		\captionof{figure}{#2}
 		\label{fig:#1}
-	\end{center}
+	\end{figure}
 }
 
 
@@ -86,6 +106,6 @@
 \makeatother
 
 \usepackage{graphicx}
-\graphicspath{{./plots/}}
+\graphicspath{{./figs/}}
 \author{Leonie Dessau \& Lena Beckmann}
 \setlength\parindent{0pt}
