--- a/402-quantenlung-von-energie/latex/template.tex
+++ b/402-quantenlung-von-energie/latex/template.tex
@@ -25,9 +25,9 @@
 
 \usepackage{ circuitikz }
 
-% \usepackage[backend=biber, style=numeric]{biblatex} % do not change this, the whole thing will break
+\usepackage[backend=biber, style=numeric]{biblatex} % do not change this, the whole thing will break
 % \usepackage{bibtex}
-\usepackage[backend=bibtex]{biblatex}
+% \usepackage[backend=bibtex]{biblatex}
 
 
 
